fix for all paths to Image folder

--- a/AboutPageNO.html
+++ b/AboutPageNO.html
@@ -10,7 +10,7 @@
                 <li><a href="./HomePageNO.html">Hjem </a> </li>
                 <li><a href="./BlogPageNO.html">Blogg </a> </li>
                 <li><a href="./AboutPageNO.html">Info </a> </li>
-                <li><a href="./AboutPageEN.html">English <img src="./images/ENFlag.png"/> </a> </li>
+                <li><a href="./AboutPageEN.html">English <img src="./Images/ENFlag.png"/> </a> </li>
             </em> </strong> </ul>
         </div>
         <h3> Hva er "Monster Run!"? </h3>
