--- a/BlogPageEN.html
+++ b/BlogPageEN.html
@@ -11,7 +11,7 @@
                 <li><a href="./HomePageEN.html">Home </a> </li>
                 <li><a href="./BlogPageEN.html">Blog </a> </li>
                 <li><a href="./AboutPageEN.html">About </a> </li>
-                <li><a href="./BlogPageNO.html">Norsk <img src="./images/NOFlag.png" /> </a> </li>
+                <li><a href="./BlogPageNO.html">Norsk <img src="./Images/NOFlag.png" /> </a> </li>
             </em> </strong> </ul>
         </div>
         
