--- a/BlogPageNO.html
+++ b/BlogPageNO.html
@@ -11,7 +11,7 @@
                 <li><a href="./HomePageNO.html">Hjem </a> </li>
                 <li><a href="./BlogPageNO.html">Blogg </a> </li>
                 <li><a href="./AboutPageNO.html">Info </a> </li>
-                <li><a href="./BlogPageEN.html">English <img src="./images/ENFlag.png"/> </a> </li>
+                <li><a href="./BlogPageEN.html">English <img src="./Images/ENFlag.png"/> </a> </li>
             </em> </strong> </ul>
         </div>
         <h1> Blogg Galleri </h1>
