--- a/AboutPageEN.html
+++ b/AboutPageEN.html
@@ -10,7 +10,7 @@
             	<li><a href="./HomePageEN.html">Home </a> </li>
             	<li><a href="./BlogPageEN.html">Blog </a> </li>
             	<li><a href="./AboutPageEN.html">About </a> </li>
-            	<li><a href="./AboutPageNO.html">Norsk <img src="./images/NOFlag.png" /> </a> </li>
+            	<li><a href="./AboutPageNO.html">Norsk <img src="./Images/NOFlag.png" /> </a> </li>
             </em> </strong> </ul>
         </div>
         <h3> What is "Monster Run!"? </h3>
