Fixed blog path

--- a/BlogPageEN.html
+++ b/BlogPageEN.html
@@ -32,7 +32,7 @@
                 <div class="blogs">
                     Page Development
                     <ol>
-                        <li> <a href="WebBlogPage1EN"> 1. Learning  the basics </a> </li>
+                        <li> <a href="./WebBlogPage1EN.html"> 1. Learning  the basics </a> </li>
                         <li> <a href="#"> 2. Getting Started </a> </li>
                     </ol>
                 </div>
