Fixed blog path

--- a/BlogPageNO.html
+++ b/BlogPageNO.html
@@ -31,7 +31,7 @@
                 <div class="blogs">
                     Nettside Utvikling
                     <ol>
-                        <li> <a href="WebBlogPage1NO"> 1. Grunnlegende Kunskap </a> </li>
+                        <li> <a href="./WebBlogPage1NO.html"> 1. Grunnlegende Kunskap </a> </li>
                         <li> <a href="#"> 2. Komme I Gang </a> </li>
                     </ol>
                 </div>
