--- a/BlogPageNO.html
+++ b/BlogPageNO.html
@@ -22,7 +22,7 @@
                     Spill Utvikling
                     <ol>
                         <li> <a href="#"> 1. Grunnlegende Kunskap </a> </li>
-                        <li> <a href="#"> 2. Komme I Gang </a> </li>
+                        <li> <a href="#"> 2. Komme i gang </a> </li>
                     </ol>
                 </div>
             </li>
@@ -32,7 +32,7 @@
                     Nettside Utvikling
                     <ol>
                         <li> <a href="./WebBlogPage1NO.html"> 1. Grunnlegende Kunskap </a> </li>
-                        <li> <a href="#"> 2. Komme I Gang </a> </li>
+                        <li> <a href="./WebBlogPage2NO.html"> 2. Css i nettside utvikling </a> </li>
                     </ol>
                 </div>
             </li>
