--- a/WebBlogPage1NO.html
+++ b/WebBlogPage1NO.html
@@ -13,6 +13,7 @@
             	<li><a href="./WebBlogPage1EN.html">English <img src="./Images/ENFlag.png"/> </a> </li>
             </em> </strong> </ul>
         </div>
+        <div = "page">
         <h3> Grunnlegene kunnskap får å lage egene websider med Html og Css </h3>
         <h4> Skrevet og laget av: Andreas Phillip Krogrud. </h4>
         <em><h6> NB: Alle Tags skal være inni <(taggen)> </h6></em>
@@ -27,5 +28,6 @@
         <p> a href=”#” /a - dette gjør alt inni tagen til en link. “#” må byttes ut med en hel link ikke bare “google.com” men “https://google.com/” om du skal bruke google. Linken kan også ikke bare være en tekst, men nesten hva som helst som du setter inni den. Dette kan også være en filplasering om du har en annen side du ønsker å åpne. </p>
         <p> “img src=”#” /” - dette er noe som heter en selv lukkende tag. Det vil si at du ikke trenger en lukke tag siden du ikke skal ha noe i mellom uansett så da legger du bare til lukke signalet”/” på slutten. “#” må bli erstattet med en link eller en filplasering. </p>
         <p> ul /ul og ol /ol - dette er de to forskelige liste typene. ul er en liste som ikke er ordnet etter tall ol denne er ordent etter tall. Så du kan lage en liste av dine favoritt måltidet med ol og en liste av ting du må gjøre med ul. </p>
+        </div>
     </body>
 </html>
