--- a/WebBlogPage1EN.html
+++ b/WebBlogPage1EN.html
@@ -13,6 +13,7 @@
             	<li><a href="./WebBlogPage1NO.html">Norsk <img src="./Images/NOFlag.png" /> </a> </li>
             </em> </strong> </ul>
         </div>
+        <div class = "page">
         <h3> Basic knowledge about making pages with Html and Css</h3>
         <h4> Written and made by: Andreas Phillip Krogrud. </h4>
         <em><h6> NB: All tags should be inn <(tag)> </h6></em>
@@ -30,5 +31,6 @@
         <p> "Img src =" # "/" - this is something called a self-closing tag. This means that you do not need a closing tag since you will not have anything in between anyway so you just add closing the signal "/" at the end. "#" Must be replaced with a link or a file placement. </p>
         <p> ul / ul and ol / ol - these are the two list types. ul is a list that is not arranged by numbers ol this is nubered. So you can make a list of your favorite meal with ol and a list of things you must do with ul. </p>
         <p> li /li - Use this inside the list to create more items on the list. </p>
+        </div>
     </body>
 </html>
