--- a/WebBlogPage1NO.html
+++ b/WebBlogPage1NO.html
@@ -13,7 +13,7 @@
             	<li><a href="./WebBlogPage1EN.html">English <img src="./Images/ENFlag.png"/> </a> </li>
             </em> </strong> </ul>
         </div>
-        <div = "page">
+        <div class = "page">
         <h3> Grunnlegene kunnskap får å lage egene websider med Html og Css </h3>
         <h4> Skrevet og laget av: Andreas Phillip Krogrud. </h4>
         <em><h6> NB: Alle Tags skal være inni <(taggen)> </h6></em>
