--- a/WebBlogPage2NO.html
+++ b/WebBlogPage2NO.html
@@ -11,7 +11,7 @@
                 <li><a href="./HomePageNO.html">Hjem </a> </li>
                 <li><a href="#">Blogg </a> </li>
                 <li><a href="./AboutPageNO.html">Info </a> </li>
-                <li><a href="./HomePageEN.html">English <img src="./Images/ENFlag.png"/> </a> </li>
+                <li><a href="./WebBlogPage2EN.html">English <img src="./Images/ENFlag.png"/> </a> </li>
             </em> </strong> </ul>
         </div>
     <div class = "page">
