--- a/WebBlogPage2NO.html
+++ b/WebBlogPage2NO.html
@@ -9,7 +9,7 @@
         <div class="nav">
             <ul> <strong> <em>
                 <li><a href="./HomePageNO.html">Hjem </a> </li>
-                <li><a href="#">Blogg </a> </li>
+                <li><a href="./BlogPageNO">Blogg </a> </li>
                 <li><a href="./AboutPageNO.html">Info </a> </li>
                 <li><a href="./WebBlogPage2EN.html">English <img src="./Images/ENFlag.png"/> </a> </li>
             </em> </strong> </ul>
