--- a/BlogPageNO.html
+++ b/BlogPageNO.html
@@ -21,7 +21,7 @@
                 <div class="blogs">
                     Spill Utvikling
                     <ol>
-                        <li> <a href="#"> 1. Grunnlegende Kunskap </a> </li>
+                        <li> <a href="./UnityBlogPage1NO.html"> 1. Grunnlegende Kunskap </a> </li>
                         <li> <a href="#"> 2. Komme i gang </a> </li>
                     </ol>
                 </div>
