--- a/BlogPageEN.html
+++ b/BlogPageEN.html
@@ -22,7 +22,7 @@
                 <div class="blogs">
                     Game Development
                     <ol>
-                        <li> <a href="#"> 1. Learning the basics </a> </li>
+                        <li> <a href="./UnityBlogPage1EN.html"> 1. Learning the basics </a> </li>
                         <li> <a href="#"> 2. Getting Starting </a> </li>
                     </ol>
                 </div>
