--- a/UnityBlogPage1NO.html
+++ b/UnityBlogPage1NO.html
@@ -17,7 +17,7 @@
         <div class = "page">
         <h3>Unity</h3>
         <h4> Kodet av: Andreas Phillip Krogrud. </h4>
-        <h4> Skrevet av: (ikke oppgitt ennå). </h4>
+        <h4> Skrevet av: Edgaras. </h4>
         <p>Unity 5 er en engine som man bruker til å lage spill. Unity 5 kommer med monodevelop som lar deg skrive scripts med languages som c#,boo og javascript.boo er Unity sit eget språk men ingen bruker det. C# er den som blir brukt mest. mens javascript blir brukt det er ikke så populert som C#. 
 </p>
         <p> I Unity så kan du lage spill til mobil,pc,web og mange andre platformer i 3D og 2D.
