--- a/BlogPageEN.html
+++ b/BlogPageEN.html
@@ -33,7 +33,7 @@
                     Page Development
                     <ol>
                         <li> <a href="./WebBlogPage1EN.html"> 1. Learning  the basics </a> </li>
-                        <li> <a href="./WebblogPage2En.html"> 2. Getting Started </a> </li>
+                        <li> <a href="./WebblogPage2En.html"> 2. Css in webpage development </a> </li>
                     </ol>
                 </div>
             </li>
