--- a/UnityBlogPage1NO.html
+++ b/UnityBlogPage1NO.html
@@ -9,7 +9,7 @@
         <div class="nav">
             <ul> <strong> <em>
             	<li><a href="./HomePageNO.html">Hjem </a> </li>
-                <li><a href="./BlogPageNO">Blogg </a> </li>
+                <li><a href="./BlogPageNO.html">Blogg </a> </li>
                 <li><a href="./AboutPageNO.html">Info </a> </li>
             	<li><a href="./UnityBlogPage1EN.html">English <img src="./Images/ENFlag.png" /> </a> </li>
             </em> </strong> </ul>
