--- a/UnityBlogPage1EN.html
+++ b/UnityBlogPage1EN.html
@@ -17,7 +17,7 @@
         <div class = "page">
         <h3>Unity</h3>
         <h4> Coded By: Andreas Phillip Krogrud. </h4>
-        <h4> Written By: Edgaras. </h4>
+        <h4> Written By: Edgaras Savicius. </h4>
         <p>Unity 5 is an engine that you use to create games. Unity 5 comes with MonoDevelop that allows you to write scripts with languages like C #, Boo and javascript.boo Unity has its own language but no one uses it. C # is the one that is used most. while JavaScript is used it is not as popular as C #.
 </p>
         <p> In Unity you can create games for mobile, pc, web and many other platforms in 3D and 2D.</p>
